--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ display: flex;
 }
 .conteudo2-principal-escrito-text2{
     margin: 5px auto;
-    background:#d9dee9;
+    background:#d5d6da;
     padding: 5px;
     width: 895px;
     border: 10px solid #d5d6da;
